--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,7 @@
   src: url(fonts/Raleway-ExtraBold.ttf)
 }
 
+/* Definition of basic tags */
 
 html {
   scroll-behavior: smooth;
@@ -35,16 +36,14 @@ body {
 h1 {
   font-size: 15px;
   font-family: Raleway-bold;
-  padding-left: 10px;
-  padding-top: 4px;
+  padding: 4px 0 0 10px;
   line-height: 20px;
 }
 
 h2 {
   font-size: 13px;
   font-family: Raleway-bold;
-  padding-left: 10px;
-  padding-top: 4px;
+  padding: 4px 0 0 10px;
   line-height: 20px;
 }
 
@@ -52,6 +51,8 @@ p {
   font-size: 12px;
   padding-left: 10px;
 }
+
+/* starting the content with the header */
 
 header>p {
   line-height: 0px;
@@ -77,6 +78,8 @@ header {
   width: 350px;
   height: 50px;
 }
+
+/* navigation buttons */
 
 #acc-act-menu {
   width: auto;
@@ -122,6 +125,8 @@ header {
 
 }
 
+/* search bar */
+
 #search-bar {
   width: 256px;
   height: 35px;
@@ -135,8 +140,7 @@ header {
   margin-top: 20px;
 }
 
-
-.map {
+.map-icon {
   background-color: #F2F2F2;
   margin-right: -1px;
   border-radius: 13px 0px 0px 13px;
@@ -146,7 +150,7 @@ header {
   text-align: center;
 }
 
-.map>a>i {
+.map-icon>a>i {
   font-weight: 5px;
   color: black;
 }
@@ -173,6 +177,8 @@ header {
   border-color: transparent;
   border-radius: 0px 13px 13px 0px;
 }
+
+/* search filters */
 
 .filters-box {
 
@@ -252,6 +258,8 @@ header {
   background-color: #0065FC;
 }
 
+/* start of the new section -- Accomodations */
+
 #Accomodations {
   width: 980px;
   height: 450px;
@@ -295,6 +303,8 @@ header {
   height: 900px;
   justify-content: flex-end;
 }
+
+/* Accomodations in Marseille section */
 
 #AccM {
   margin: 10px;
@@ -391,6 +401,8 @@ header {
   color: #e0e0e0;
 }
 
+/* Popular section */
+
 #Popular {
   margin: 10px;
   width: 270px;
@@ -479,6 +491,8 @@ header {
   padding-left: 10px;
 }
 
+/* starting a new and different section -- Activities in Marseille */
+
 #Activities{
   width: auto;
   height: 400px;
@@ -510,6 +524,8 @@ header {
   text-decoration: none;
   color:black;
 }
+
+/*differenciation between the different activities and their respective dimentions*/
 
 .longpic {
   width: 230;
@@ -558,6 +574,8 @@ header {
   border-radius: 15px 15px 0px 0px;
   object-fit: cover;
 }
+
+/* elaboration of the footer */
 
 footer {
   width: auto;
@@ -663,6 +681,8 @@ footer>div>p>a {
     justify-content: flex-start;
   }
 
+/* flex-flow to column-verse, to achieve exchange of sections */
+
   #Accomodations>div {
     display: flex;
     flex-flow: column-reverse;
@@ -731,7 +751,7 @@ footer>div>p>a {
 
   #Activities {
     height: 1050px;
-}
+  }
 
   #Activities>h1 {
     margin: 10px 0px 0px 20px;
@@ -752,6 +772,8 @@ footer>div>p>a {
     width: 250px;
     height: 153px;
   }
+
+  /* longpic becomes the same dimensions as shortpic */
 
   .longpic {
     width: 250px;
